--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
 
   <head>
     <meta charset="utf-8">
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone@7/babel.min.js"></script>
     <title>Pro MERN Stack</title>
   </head>
   <body>
