working react node js server

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,14 @@
   </head>
   <body>
     <div id="contents"></div>
-    const element = (
-    <div title="outer div">
-      <h1> Hello World</h1>
-    </div>
-    );
-
-    ReactDOM.render(element, document.getElementById('contents'));
+    <script type="text/babel">
+      const element = (
+	      <div title="outer div">
+	      <h1> Hello Winston</h1>
+	      </div>
+      );
+      ReactDOM.render(element, document.getElementById('contents'));
+    </script>
   </body>
   </html>
   
